--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
   "description": "Add galleries to site",
   "type": "silverstripe-vendormodule",
   "license": "BSD-3-Clause",
-  "keywords": [
-    "inferno"
+  "keywords": ["opticinferno"
   ],
   "authors": [
     {
