Update files to work with sizing of images if none is specified in controller

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
   "description": "Add galleries to site",
   "type": "silverstripe-vendormodule",
   "license": "BSD-3-Clause",
-  "keywords": ["opticinferno"
+  "keywords": [
+    "opticinferno"
   ],
   "authors": [
     {
