--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "silverstripe-vendormodule",
   "license": "BSD-3-Clause",
   "keywords": [
-    "opticinferno"
+    "inferno"
   ],
   "authors": [
     {
